@@ -486,9 +486,25 @@ static NEARDATA const char styluses[] =
  * moonstone  -  6	(orthoclase)	* amber      -	2-2.5
  */
 
-/* return 1 if action took 1 (or more) moves, 0 if error or aborted */
+static int engrave(const char *, boolean);
+
+/** return 1 if action took 1 (or more) moves, 0 if error or aborted */
 int
 doengrave()
+{
+	return engrave(NULL, FALSE);
+}
+int
+doengrave_elbereth()
+{
+	return engrave("Elbereth", TRUE);
+}
+
+static
+int
+engrave(engraving, fingers)
+const char *engraving;
+boolean fingers;
 {
 	boolean dengr = FALSE;	/* TRUE if we wipe out the current engraving */
 	boolean doblind = FALSE;/* TRUE if engraving blinds the player */
@@ -560,7 +576,15 @@ doengrave()
 	 * Edited by GAN 10/20/86 so as not to change weapon wielded.
 	 */
 
-	otmp = getobj(styluses, "write with");
+	if (fingers) {
+		if (uwep && uwep->otyp == ATHAME) {
+			otmp = uwep;
+		} else {
+			otmp = &zeroobj;
+		}
+	} else {
+		otmp = getobj(styluses, "write with");
+	}
 	if(!otmp) return(0);		/* otmp == zeroobj if fingers */
 
 	if (otmp == &zeroobj) writer = makeplural(body_part(FINGER));
@@ -941,7 +965,7 @@ doengrave()
 
 	    /* Give player the choice to add to engraving. */
 
-	    if (type == HEADSTONE) {
+	    if (type == HEADSTONE || engraving) {
 		/* no choice, only append */
 		c = 'y';
 	    } else if ( (type == oep->engr_type) && (!Blind ||
@@ -1024,7 +1048,13 @@ doengrave()
 	}
 
 	/* Tell adventurer what is going on */
-	if (otmp != &zeroobj)
+	if (engraving && otmp == &zeroobj)
+	    You("%s \"%s\" %swith your %s %s the %s.", everb, engraving,
+		eword, makeplural(body_part(FINGER)), eloc, eground);
+	if (engraving && otmp != &zeroobj)
+	    You("%s \"%s\" %swith %s %s the %s.", everb, engraving,
+		eword, doname(otmp), eloc, eground);
+	else if (otmp != &zeroobj)
 	    You("%s %swith %s %s the %s.", everb, eword, doname(otmp),
 		eloc, eground);
 	else
@@ -1034,6 +1064,8 @@ doengrave()
 	/* Prompt for engraving! (if literate) */
 	if(u.roleplay.illiterate) {
 	    Sprintf(ebuf,"X");
+	} else if (engraving) {
+	    Sprintf(ebuf, engraving);
 	} else {
 	    Sprintf(qbuf,"What do you want to %s %s the %s here?", everb,
 		eloc, eground);
